manifests/03-apisix/ingressss-annotations-10000/4630-10.yaml
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04630-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04630-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04631-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04631-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04632-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04632-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04633-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04633-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04634-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04634-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04635-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04635-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04636-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04636-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04637-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04637-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04638-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04638-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04639-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04639-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
